--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="header-nav nav">
                 <a href="./index.html" class="link logo">Web<span class="logo-header">Studio</span></a>
                 <ul class="nav-list list">
-                    <li><a class="link nav-link" href="./index.html">Studio</a></li>
+                    <li><a class="link nav-link current" href="./index.html">Studio</a></li>
                     <li><a class="link nav-link" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="link nav-link" href="">Contacts</a></li>
                 </ul>
@@ -42,7 +42,7 @@
             <div class="hero-flex container">
                 <h1 class="hero-title hero-item">Effective Solutions
                     for Your Business</h1>
-                <button class="hero-button hero-item" type="button">Order Service</button>
+                <button class="hero-button hero-item" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
         <section class="feature-container">
@@ -51,11 +51,21 @@
                 <h2 class="visually-hidden">Features</h2>
                 <ul class="feature-flex list">
                     <li class="feature-item">
+                        <a class="feature-link link" href="">
+                            <svg class="feature-icon" width="64" height="64">
+                              <use href="./images/sprite.svg#icon-antenna"></use>
+                            </svg>
+                        </a>
                         <h3 class="section-feature-title">Strategy</h3>
                         <p class="section-feature-text">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="feature-item">
+                        <a class="feature-link link" href="">
+                            <svg class="feature-icon" width="64" height="64">
+                              <use href="./images/sprite.svg#icon-clock"></use>
+                            </svg>
+                        </a>
                         <h3 class="section-feature-title">Punctuality</h3>
                         <p class="section-feature-text">Bring the key message to the brand's audience for the best price
                             within the shortest possible
@@ -63,12 +73,22 @@
                         </p>
                     </li>
                     <li class="feature-item">
+                        <a class="feature-link link" href="">
+                            <svg class="feature-icon" width="64" height="64">
+                              <use href="./images/sprite.svg#icon-diagram"></use>
+                            </svg>
+                        </a>
                         <h3 class="section-feature-title">Diligence</h3>
                         <p class="section-feature-text">Research and confirm brands that present the strongest digital
                             growth opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="feature-item">
+                        <a class="feature-link link" href="">
+                            <svg class="feature-icon" width="64" height="64">
+                              <use href="./images/sprite.svg#icon-astronaut"></use>
+                            </svg>
+                        </a>
                         <h3 class="section-feature-title">Technologies</h3>
                         <p class="section-feature-text">Design practice focused on digital experiences. We bring forth a
                             deep passion for
@@ -99,6 +119,20 @@
                         <div class="team-member">
                             <h3 class="team-title">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
+                            <a href="" class="link social-link">
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -106,6 +140,20 @@
                         <div class="team-member">
                             <h3 class="team-title">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
+                            <a href="" class="link social-link">
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -113,6 +161,20 @@
                         <div class="team-member">
                             <h3 class="team-title">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
+                            <a href="" class="link social-link">
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -120,19 +182,111 @@
                         <div class="team-member">
                             <h3 class="team-title">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
+                            <a href="" class="link social-link">
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                                <svg class="logo-icon" width="16" height="16">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+        <section class="section-customers">
+            <div class="container">
+                <h2 class="section-title">Customers</h2>
+                <ul class="customers-flex list">
+                    <li class="customers-item">
+                        <a class="customers-link link" href="">
+                            <svg class="customers-icon" width="104" height="56">
+                            <use href="./images/sprite.svg#icon-logo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link" href="">
+                            <svg class="customers-icon" width="104" height="56">
+                            <use href="./images/sprite.svg#icon-logo_1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link" href="">
+                            <svg class="customers-icon" width="104" height="56">
+                            <use href="./images/sprite.svg#icon-logo_company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link" href="">
+                            <svg class="customers-icon" width="104" height="56">
+                            <use href="./images/sprite.svg#icon-group"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link" href="">
+                            <svg class="customers-icon" width="104" height="56">
+                            <use href="./images/sprite.svg#icon-logo_2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link" href="">
+                            <svg class="customers-icon" width="104" height="56">
+                            <use href="./images/sprite.svg#icon-logo_3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
             <a href="./index.html" class="link logo footer-item">Web<span class="logo-footer">Studio</span></a>
+            <a class="footer-social-title">Social media</a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+                growth solutions.</p>            
+            <a href="" class="link footer-social-link">
+                <svg class="logo-icon" width="16" height="16">
+                <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+                <svg class="logo-icon" width="16" height="16">
+                <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+                <svg class="logo-icon" width="16" height="16">
+                <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+                <svg class="logo-icon" width="16" height="16">
+                <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+            </a>
         </div>
     </footer>
+    <!--Modal window-->
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="modal-btn" type="button" data-modal-close>
+                <svg class="modal-btn-icon" width="8" height="8">
+                  <use href="./images/sprite.svg#icon-close-black"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
 
 </body>
 
