--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                 <a href="./index.html" class="link logo">Web<span class="logo-header">Studio</span></a>
                 <ul class="nav-list list">
                     <li><a class="link nav-link" href="./index.html">Studio</a></li>
-                    <li><a class="link nav-link" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="link nav-link current" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="link nav-link" href="">Contacts</a></li>
                 </ul>
             </nav>
@@ -58,7 +58,14 @@
                     </li>
                     <li class="card">
                         <a href="" class="link">
-                            <img src="./images/cashless.jpg" alt="cashless payment" width="360">
+                            <div class="cashless-box">
+                                <img class="card-list" src="./images/cashless.jpg" alt="cashless payment" width="360">
+                                <div class="overlay">
+                                    <p class="overlay-text">
+                                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                                    </p>
+                                </div>
+                            </div>
                             <div class="card-name">
                                 <h2 class="project-title">Cashless Payment</h2>
                                 <p class="project-text">Marketing</p>
