--- a/portfolio.html
+++ b/portfolio.html
@@ -142,10 +142,45 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="link logo footer-item">Web<span class="logo-footer">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+        <div class="footer-flex container">
+            <div class="footer-trend">
+                <a href="./index.html" class="link logo footer-item">Web<span class="logo-footer">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                    growth solutions.</p>
+            </div>
+            <div class="footer-media">
+                <p class="footer-social-title">Social media</p>
+                <ul class="footer-media-list list">
+                    <li class="footer-media-item">
+                        <a class="footer-media-nav" href="">
+                            <svg class="logo-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-media-item">
+                        <a class="footer-media-nav" href="">
+                            <svg class="logo-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-media-item">
+                        <a class="footer-media-nav" href="">
+                            <svg class="logo-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-media-item">
+                        <a class="footer-media-nav" href="">
+                            <svg class="logo-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 
